--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,13 +1,13 @@
 Package: tables
 Title: Formula-driven table generation
-Version: 0.3
+Version: 0.5
 Author: Duncan Murdoch
-Description: Same idea as SAS PROC TABULATE
+Description: Computes and displays complex tables of summary statistics
 Maintainer: Duncan Murdoch <murdoch@stats.uwo.ca>
 License: GPL-2
 Depends: R (>= 2.12.0), Hmisc
 Repository: CRAN
 Repository/R-Forge/Project: tables
-Repository/R-Forge/Revision: 2
-Date/Publication: 2011-11-29 16:38:26
-Packaged: 2011-11-28 22:32:35 UTC; rforge
+Repository/R-Forge/Revision: 19
+Date/Publication: 2011-12-07 10:14:11
+Packaged: 2011-12-06 22:47:46 UTC; rforge
