--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,13 +1,11 @@
 Package: tables
 Title: Formula-driven table generation
-Version: 0.5
+Version: 0.6
 Author: Duncan Murdoch
 Description: Computes and displays complex tables of summary statistics
 Maintainer: Duncan Murdoch <murdoch@stats.uwo.ca>
 License: GPL-2
 Depends: R (>= 2.12.0), Hmisc
+Packaged: 2012-04-02 13:42:33 UTC; murdoch
 Repository: CRAN
-Repository/R-Forge/Project: tables
-Repository/R-Forge/Revision: 19
-Date/Publication: 2011-12-07 10:14:11
-Packaged: 2011-12-06 22:47:46 UTC; rforge
+Date/Publication: 2012-04-02 17:47:30
