--- a/NAMESPACE
+++ b/NAMESPACE
@@ -1,6 +1,9 @@
-export(tabular, latexNumeric, PlusMinus, Hline, RowFactor, All, Literal,
-       table_options, booktabs)
+export(tabular, latexNumeric, PlusMinus, Hline, Factor, RowFactor, All, Literal,
+       Multicolumn, table_options, booktabs, write.csv.tabular, write.table.tabular)
 importFrom(Hmisc, latex)
 S3method(print, tabular)
 S3method(format, tabular)
 S3method(latex, tabular)
+S3method(as.matrix, tabular)
+S3method(tabular, default)
+S3method(tabular, formula)
