--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,11 +1,12 @@
 Package: tables
 Title: Formula-driven table generation
-Version: 0.7
+Version: 0.7.64
 Author: Duncan Murdoch
 Description: Computes and displays complex tables of summary statistics
 Maintainer: Duncan Murdoch <murdoch@stats.uwo.ca>
 License: GPL-2
 Depends: R (>= 2.12.0), Hmisc
-Packaged: 2012-12-14 17:20:50 UTC; murdoch
+Packaged: 2013-11-12 15:31:19 UTC; murdoch
+NeedsCompilation: no
 Repository: CRAN
-Date/Publication: 2012-12-14 19:05:20
+Date/Publication: 2013-11-12 18:57:19
