--- a/NAMESPACE
+++ b/NAMESPACE
@@ -1,9 +1,17 @@
-export(tabular, latexNumeric, PlusMinus, Hline, Factor, RowFactor, All, Literal,
-       Multicolumn, table_options, booktabs, write.csv.tabular, write.table.tabular)
-importFrom(Hmisc, latex)
+export(tabular, htmlNumeric, latexNumeric, PlusMinus, Paste, Hline, Factor, RowFactor, All, Literal,
+       Multicolumn, table_options, booktabs, htmloptions, write.csv.tabular, write.table.tabular)
+
+# pseudo-function exports; not meant to be called, but meant to make the checks happy
+export(Format, Heading, Justify, Percent)
+
+importFrom(Hmisc, latex, html)
 S3method(print, tabular)
 S3method(format, tabular)
 S3method(latex, tabular)
+S3method(html, tabular)
 S3method(as.matrix, tabular)
 S3method(tabular, default)
 S3method(tabular, formula)
+S3method("[", tabular)
+S3method(cbind, tabular)
+S3method(rbind, tabular)
