--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,12 +1,15 @@
 Package: tables
 Title: Formula-driven table generation
-Version: 0.7.64
+Version: 0.7.79
 Author: Duncan Murdoch
 Description: Computes and displays complex tables of summary statistics
 Maintainer: Duncan Murdoch <murdoch@stats.uwo.ca>
 License: GPL-2
 Depends: R (>= 2.12.0), Hmisc
-Packaged: 2013-11-12 15:31:19 UTC; murdoch
-NeedsCompilation: no
 Repository: CRAN
-Date/Publication: 2013-11-12 18:57:19
+Repository/R-Forge/Project: tables
+Repository/R-Forge/Revision: 79
+Repository/R-Forge/DateTimeStamp: 2014-05-22 01:40:15
+Date/Publication: 2014-07-24 15:04:15
+Packaged: 2014-05-22 02:35:16 UTC; rforge
+NeedsCompilation: no
