--- a/NAMESPACE
+++ b/NAMESPACE
@@ -1,8 +1,10 @@
-export(tabular, htmlNumeric, latexNumeric, PlusMinus, Paste, Hline, Factor, RowFactor, All, Literal,
-       Multicolumn, table_options, booktabs, htmloptions, write.csv.tabular, write.table.tabular)
+export(tabular, htmlNumeric, labelSubset, latexNumeric, PlusMinus, 
+       Paste, Hline, Factor, RowFactor, All, Literal,
+       Multicolumn, table_options, booktabs, htmloptions, write.csv.tabular, write.table.tabular,
+       as.tabular)
 
 # pseudo-function exports; not meant to be called, but meant to make the checks happy
-export(Format, Heading, Justify, Percent)
+export(Format, Heading, Justify, Percent, Arguments)
 
 importFrom(Hmisc, latex, html)
 S3method(print, tabular)
@@ -15,3 +17,5 @@ S3method(tabular, formula)
 S3method("[", tabular)
 S3method(cbind, tabular)
 S3method(rbind, tabular)
+S3method(as.tabular, default)
+S3method(as.tabular, data.frame)
